# esp32-llm

./: .gitignore  Kconfig.projbuild  README.md  _.bak.c  linker.lf  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  hello_world_main.c  idf_component.yml  llama.h  llm.c  llm.h  main.c
